Fixed Input Active Line Bleed
Fixed our instance of https://github.com/Dogfalo/materialize/issues/886

--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,9 @@ html, body {
 #toast-container {
 	z-index: 1004;
 }
+input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+	box-shadow: 0 2px 0 -1px #26a69a !important;
+}
 
 /* MOS Logo */
 .logo-container {
